# Mallow

./: .gitignore  CMakeLists.txt  CmakeLists.txt  Doxyfile  README.md  Third_party_licenses.md  definitions.cmake  mallow_design_doc.md
app/: CMakeLists.txt  CmakeLists.txt  main.cpp
modules/core/core/: CMakeLists.txt  CmakeLists.txt
modules/core/core/private/: c_string.cpp  crt_internals.h  format.cpp  freestanding.cpp  galloc.cpp  io.cpp  macro.cpp  mem.cpp  memory.cpp  mutex.cpp  new_imp.cpp  proc_context.cpp  syscall.h  terminal.cpp  thread.cpp
modules/core/core/private/itanium_crt/: crt.cpp
modules/core/core/private/math/: cbrt.cpp  exp.cpp  helpers.hpp  log.cpp  log10.cpp  log2.cpp  log2f.cpp  logf.cpp  pow.cpp  trivial.cpp
modules/core/core/private/posix/: syscall_api.h
modules/core/core/private/windows_crt/: crt.cpp  init_thread.cpp
modules/core/core/public/core/: bit.h  c_string.h  compilers.h  error.h  handle.h  io.h  macro.h  memory.h  optional.h  proc_context.h  result.h  terminal.h  traits.h  typedef.h  variant.h
modules/core/core/public/core/io/: format.h  handle.h  io.h  terminal.h
modules/core/core/public/core/libc/: math.h  mem.h  process.h  str.h
modules/core/core/public/core/libc/implementation/: float_manip.inl
modules/core/core/public/core/memory/: galloc.h  memory.h
modules/core/core/public/core/thread/: atomic.h  atomic_op.h  candvar.h  lock.h  mutex.h  rwlock.h  spinlock.h  thread.h
modules/core/core/tests/: CMakeLists.txt  CmakeLists.txt  math.cpp  test.cpp  test_galloc_threaded.cpp
modules/core/entry/: CMakeLists.txt  CmakeLists.txt
modules/core/entry/private/: main.cpp
tools/: build.bat  build.sh  clean.bat  clean.sh  clean_all.bat  clean_all.sh  gen_docs.bat  gen_docs.sh  rebuild.bat  rebuild.sh  run.bat  run.sh  test.bat  test.sh
tools/cmake/: Docs.cmake  definitions.cmake  warnings.cmake
tools/math_checker/: CMakeLists.txt  test_main.cpp
tools/test_runner/: CMakeLists.txt  CmakeLists.txt
tools/test_runner/src/: main.cpp
